fix: navbar responsive fix navbar on mobile version change navbar to sticky to top of the page add margin to main element

--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -1,8 +1,3 @@
-nav {
-  /* margin: 0 1rem; */
-  height: 5rem;
-}
-
 .brand-logo {
   height: 2rem;
   margin-right: 1rem;
@@ -29,5 +24,12 @@ nav {
 
   .button-container {
     display: block;
+  }
+}
+
+@media (min-width: 992px) {
+  nav {
+    /* margin: 0 1rem; */
+    height: 5rem;
   }
 }
